# bearmark

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  diesel.toml  docker-compose.yaml  flake.nix  package-lock.json  package.json
.cargo/: config.toml
.gitea/workflows/: CI.yml  build-image.yml  build.yml  release.yml  rust.yml
.github/: dependabot.yml
.github/actions/setup-nix/: action.yaml
.github/workflows/: CD.yml  CI.yml  Release.yml
bearmark-api/: Cargo.toml
bearmark-api/src/: lib.rs
bearmark-api/src/api/: bookmark.rs  configs.rs  errors.rs  folder.rs  tag.rs
bearmark-api/src/api/fairings/: db.rs
bearmark-api/src/api/guards/: mod.rs
bearmark-api/src/db/: bookmark.rs  connection.rs  extending.rs  folder.rs  mod.rs  schema.rs  search.rs  tag.rs
bearmark-api/src/utils/: logging.rs  mod.rs  rand.rs
bearmark-macro/: Cargo.toml
bearmark-macro/src/: lib.rs
bearmark-ql/: Cargo.toml
bearmark-ql/src/: lib.rs
bearmark-types/: Cargo.toml
bearmark-types/src/: bookmark.rs  folder.rs  lib.rs  tag.rs
bearmark-web/: .gitignore  Cargo.toml  Trunk.toml  index.html  package.json  styles.css  tailwind.config.js  tailwind.config.mjs
bearmark-web/src/: app.rs  main.rs
bearmark-web/src/api/: bookmarks.rs  client.rs  mod.rs
bearmark-web/src/components/: bearmarks_list.rs  bookmark_card.rs  mod.rs  navbar.rs  search_bar.rs  settings_modal.rs
bearmark-web/src/pages/: bookmarks.rs  home.rs  mod.rs
deployments/docker-compose/: docker-compose.yaml  example.env
migrations/2024-06-07-163325_create_bookmarks/: up.sql
migrations/2024-06-22-085015_delete_bookmarks/: down.sql  up.sql
migrations/2024-07-01-143050_update_bookmark/: down.sql  up.sql
migrations/2024-07-02-145638_tags/: down.sql  up.sql
migrations/2024-07-19-133751_folders/: down.sql  up.sql
migrations/2024-07-20-161654_folders/: down.sql  up.sql
scripts/: cli.sh
src/: lib.rs  main.rs  models.rs
src/api/: bookmark.rs  configs.rs  errors.rs  folder.rs  mod.rs  tag.rs
src/api/fairings/: db.rs
src/api/guards/: mod.rs
src/db/: bookmark.rs  connection.rs  errors.rs  folder.rs  mod.rs  schema.rs  search.rs  tag.rs
src/utils/: errors.rs  logging.rs  mod.rs  search.rs
