[workspace]
members = ["bearmark-api", "bearmark-macro", "bearmark-ql"]
resolver = "2"

[workspace.dependencies]
# allocation
bumpalo = "3.17.0"
# logging
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# initialization
ctor = "0.2.9"

# members
bearmark-ql = { path = "./bearmark-ql" }
bearmark-macro = { path = "./bearmark-macro" }
