[workspace]
members = ["bearmark-api", "bearmark-macro", "bearmark-ql"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
# allocation
bumpalo = "3.17"
# logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# initialization
ctor = "0.4"

# members
bearmark-ql = { path = "./bearmark-ql" }
bearmark-macro = { path = "./bearmark-macro" }
