[package]
name = "bearmark-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = "0.2.0"

# database
diesel = { version = "2.2.4", features = ["postgres", "time"] }
diesel-async = { version = "0.5.0", features = [
  "async-connection-wrapper",
  "postgres",
  "deadpool",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

#####################
# search enhancement
#####################
bearmark-ql.workspace = true
bearmark-macro.workspace = true
# allocation
bumpalo.workspace = true

##################
# other utilities
##################
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
itertools = "0.13.0"
time = { version = "0.3.36", features = ["local-offset", "macros", "serde"] }
percent-encoding = "2.3.1"
# logging
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
# async runtime
tokio = { version = "1.40.0", features = ["rt", "macros", "sync"] }
futures = "0.3.31"
# error handling
anyhow = "1.0.89"
thiserror = "1.0.64"
# API Doc Gen
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "8.0.1", features = ["rocket"] }
utoipa-rapidoc = { version = "5.0.0", features = ["rocket"] }

[dev-dependencies]
# setup for tests
ctor.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.104", features = ["vendored"] }
pq-sys = { version = "0.6.1", features = ["bundled"] }
