[package]
name = "bearmark-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = "0.2.0"

# database
diesel = { version = "2.2.7", features = ["postgres", "time"] }
diesel-async = { version = "0.5.2", features = [
  "async-connection-wrapper",
  "postgres",
  "deadpool",
] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

#####################
# search enhancement
#####################
bearmark-ql.workspace = true
bearmark-macro.workspace = true
# allocation
bumpalo.workspace = true

##################
# other utilities
##################
serde = { version = "1.0.218", features = ["derive"] }
rand = "0.9.0"
itertools = "0.14.0"
time = { version = "0.3.37", features = ["local-offset", "macros", "serde"] }
percent-encoding = "2.3.1"
# logging
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
# async runtime
tokio = { version = "1.43.0", features = ["rt", "macros", "sync"] }
futures = "0.3.31"
# error handling
anyhow = "1.0.95"
thiserror = "2.0.11"
# API Doc Gen
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["rocket"] }
utoipa-rapidoc = { version = "6.0.0", features = ["rocket"] }

[dev-dependencies]
# setup for tests
ctor.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.106", features = ["vendored"] }
pq-sys = { version = "0.7.0", features = ["bundled"] }
