[package]
name = "bearmark-api"
version.workspace = true
edition.workspace = true

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = "0.2"

# database
diesel = { version = "2.2", features = ["postgres", "time"] }
diesel-async = { version = "0.6", features = [
  "async-connection-wrapper",
  "postgres",
  "deadpool",
] }
diesel_migrations = { version = "2.2", features = ["postgres"] }

#####################
# search enhancement
#####################
bearmark-ql.workspace = true
bearmark-macro.workspace = true
# allocation
bumpalo.workspace = true

##################
# other utilities
##################
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
itertools = "0.14"
time = { version = "0.3", features = ["local-offset", "macros", "serde"] }
percent-encoding = "2.3"
# logging
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
# async runtime
tokio = { version = "1.47", features = ["rt", "macros", "sync"] }
futures = "0.3"
# error handling
anyhow = "1.0"
thiserror = "2.0"
# API Doc Gen
utoipa = "5.3"
utoipa-swagger-ui = { version = "9.0", features = ["rocket"] }
utoipa-rapidoc = { version = "6.0", features = ["rocket"] }
zip = { version = ">=2.4, <4.6" }                               # Pin to avoid compilation errors with `utoipa-swagger-ui` in version 2.5

[dev-dependencies]
# setup for tests
ctor.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
pq-sys = { version = "0.7", features = ["bundled"] }
