[package]
name = "bearmark-ql"
version.workspace = true
edition.workspace = true

[dependencies]
peggen = "0.2"

# allocation
bumpalo.workspace = true

# logging
tracing.workspace = true

[dev-dependencies]
# setup for tests
ctor.workspace = true
# logging
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
