[package]
name = "bearmark-web"
edition.workspace = true
version.workspace = true

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
bearmark-types.workspace = true
serde.workspace = true
serde_json = "1.0"
time.workspace = true
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
urlencoding = "2.1"
web-sys = "0.3"
