[package]
name = "bearmark-web"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"

# HTTP client for WASM
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
wasm-bindgen-futures = "0.4"

# Logging
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
